[package]
name = "rusty-mandelbrot-set"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
rayon = "1.5.3"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = 3
lto = true
panic = 'abort'
codegen-units = 1
